--- a/dev/sass/_util.vars.scss
+++ b/dev/sass/_util.vars.scss
@@ -6,7 +6,10 @@
 $lunch-color-red: #FF0046;
 $lunch-color-red-dark: #C90037;
 $lunch-color-blu: #00B9E7;
-$lunch-color-blu-dark: #00AEDA;
+$lunch-color-blu-dark: #0083A3;
+$lunch-color-grn: #ADE61A;
+$lunch-color-grn-dark: #98D300;
+$lunch-color-ylw: #FFF0A0;
 
 
 // Timer
