--- a/dev/sass/_util.vars.scss
+++ b/dev/sass/_util.vars.scss
@@ -9,8 +9,8 @@ $lunch-color-blu: #00B9E7;
 $lunch-color-blu-dark: #0083A3;
 $lunch-color-grn: #ADE61A;
 $lunch-color-grn-dark: #98D300;
-$lunch-color-ylw: #FFF0A0;
-
+$lunch-color-ylw: #FFEC88;
+$lunch-color-ylw-dark: #FFD600;
 
 // Timer
 $lunch-time-over: 200ms;
