--- a/dev/sass/_view.settings.scss
+++ b/dev/sass/_view.settings.scss
@@ -2,3 +2,10 @@
  * Styles for lunchpad settings view
  * @author Joachim Fröstl <jf@19h13.com>
  */
+
+ .lunch-view-settings {
+
+ 	background: {
+ 		color: #f00;
+ 	}
+ }
