--- a/dev/sass/_view.venue.scss
+++ b/dev/sass/_view.venue.scss
@@ -3,7 +3,7 @@
  * @author Joachim Fröstl <jf@19h13.com>
  */
 
- .lunch-view-venuedetail {
+ .lunch-view-venue {
  	background: {
  		color: #0f0;
  	}
