--- a/templates/view.venuedetail.html
+++ b/templates/view.venuedetail.html
@@ -1,3 +1,4 @@
-<h1>
-Test: VenueDetail {{venueId}}
-</h1>
+<div class="lunch-view-venue">
+	<a ng-click="goto('/venues')">back</a>
+	<h1>Test: VenueDetail {{venueId}}</h1>
+</div>
