--- a/templates/view.venuelist.html
+++ b/templates/view.venuelist.html
@@ -30,7 +30,7 @@
 			<div class="lunch-venue-body">
 				
 				<header class="lunch-venue-header">
-					<h2 class="lunch-venue-title">{{venue.name}}</h2>
+					<h2 class="lunch-venue-title" ng-click="goto('/venue/1')">{{venue.name}}</h2>
 					<span ng-show="venue.commentcount" class="lunch-venue-commentcount"><span class="lunch-venue-commentcount-arrow">&nbsp;</span>{{venue.commentcount}} Comments</span>
 					<a href="{{venue.url}}" class="lunch-fn-menu" target="blank">View Menu</a>
 				</header>
