--- a/templates/page.app.angular.html
+++ b/templates/page.app.angular.html
@@ -42,8 +42,6 @@
 
 
 
-
-
 			<!-- Nav -->
 
 			<nav class="lunch-nav" ng-controller="DetailsCtrl">
@@ -63,10 +61,7 @@
 						<a href="#/settings" class="lunch-fn-settings">Settings</a>
 					</li>
 					<li class="lunch-nav-elem">
-						<a href="#/venue/1" class="lunch-fn-xx">Detail</a>
-					</li>
-					<li class="lunch-nav-elem">
-						<a href="#/venues" class="lunch-fn-xx">Ois</a>
+						<a href="#/venues" class="lunch-fn-xx">Venues</a>
 					</li>
 					<li class="lunch-nav-elem">
 						<a href="/logout" class="lunch-fn-logout">Logout</a>
@@ -109,25 +104,6 @@
 			<div ng-view class="lunch-view-container lunch-apppage-body"></div>
 		</div>
 
-
-
-
-
-
-
-
-
-
-
-  	
-
-
-
-		<!-- Flash Gordon Savior of the Universe -->
-		
-
-
-		
 
 
 
