--- a/templates/view.venuedetail.html
+++ b/templates/view.venuedetail.html
@@ -2,24 +2,15 @@
 	
 	<header class="lunch-venue-header">
 		<a ng-click="goto('/venues')" class="lunch-fn-back">
-			<span class="lunch-icon"><</span>
-			<span class="lunch-label">back to all venues</span>
+			<span class="lunch-icon">B</span>
 		</a>
 
 		<h1 class="lunch-venue-title">Scheidegger</h1>
 	</header>
 
-	<a ng-hide="venue.attending" href="" class="lunch-fn-attend">
-		<span class="lunch-label">Lunch here</span>
-		<span class="lunch-icon">Y</span>
-	</a>
-	<a ng-show="venue.attending" href="" class="lunch-fn-quit">
-		<span class="lunch-label">Cancel</span>
-		<span class="lunch-icon">N</span>
-	</a>
-	
 
 	<div class="lunch-venue-guests" >
+		<!-- <p class="lunch-venue-commentcount"><span class="lunch-venue-commentcount-arrow">&nbsp;</span>We plan to lunch here!</p> -->
 		<div class="lunch-venue-guest anim-user-slide">
 			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
 			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
@@ -70,7 +61,22 @@
 		</div>
 	</div>
 
+	<div class="lunch-venue-interaction">
+		<a class="lunch-fn-menu">
+			<span class="lunch-icon">N</span>
+			<span href="" class="lunch-label">View Menu</span>
+		</a>
 
+		<div ng-hide="venue.attending" class="lunch-fn-attend">
+			<!-- <span class="lunch-label">Lunch here</span> -->
+			<span class="lunch-icon">Y</span>
+			<span class="lunch-label">Go for Lunch here</span>
+		</div>
+		<a ng-show="venue.attending" href="" class="lunch-fn-quit">
+			<!-- <span class="lunch-label">Cancel</span> -->
+			<span class="lunch-icon">N</span>
+		</a>
+	</div>
 	<div class="lunch-comments">
 		
 		<div class="lunch-comments-list">
@@ -78,16 +84,25 @@
 				<div class="lunch-commentator">
 					<img width="40" height="80" src="../static/img/mk.png" alt="" class="lunch-user-image">
 				</div>
+				<p class="lunch-comment-content"><span class="lunch-comment-arrow">&nbsp;</span>Hey, was geht? Wann gehma?</p>
 			</div>
+
+			<div class="lunch-comment">
+				<div class="lunch-commentator">
+					<img width="40" height="80" src="../static/img/mrz.png" alt="" class="lunch-user-image">
+				</div>
+				<p class="lunch-comment-content"><span class="lunch-comment-arrow">&nbsp;</span>
+					Wir gehen ins Arts'n Boards. Da gibts Burger. Kommt lieber mit uns mit!</p>
+			</div>
+
+
+			<form action="" class="lunch-comment lunch-comment-input">
+				<div class="lunch-commentator">
+					<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
+				</div>
+				<textarea type="text" class="lunch-comment-content"></textarea>
+				<!-- <button type="submit">Post Comment</button> -->
+			</form>
 		</div>
-
-
-		<form action="" class="lunch-comment-input">
-			<div class="lunch-commentator">
-				<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			</div>
-			<input type="text">
-			<button type="submit">Post Comment</button>
-		</form>
 	</div>
 </div>
