--- a/templates/view.venuelist.html
+++ b/templates/view.venuelist.html
@@ -44,8 +44,12 @@
 
 				</div>
 
-				<a ng-hide="venue.attending" href="" class="lunch-fn-attend">Y</a>
-				<a ng-show="venue.attending" href="" class="lunch-fn-quit">N</a>
+				<a ng-hide="venue.attending" href="" class="lunch-fn-attend">
+					<span class="lunch-icon">Y</span>
+				</a>
+				<a ng-show="venue.attending" href="" class="lunch-fn-quit">
+					<span class="lunch-icon">N</span>
+				</a>
 			</div>
 
 		</div>
