--- a/dev/sass/_ui.buttons.scss
+++ b/dev/sass/_ui.buttons.scss
@@ -51,32 +51,91 @@ $lunch-btn-rotate-hover: 360deg;
 	
 	// Box
 	display: block;
-	padding: 10px;
-	border: {
-		width: 2px;
-		style: dashed;
-		color: #555;
-	}
+	
+
+	overflow: hidden;
 
 	// Skin
 	color: white;
-	font: {
-		family: 'lunch-ico';
-		style: regular;
-		size: 30px;
+	background: {
+		color: transparent;
 	}
 	-webkit-font-smoothing: antialiased;
 	text-decoration: none;
 	text-align: center;
-	border-radius: 34px;
-	
-	// Effects
-	@include hoverrotate( $lunch-btn-rotate-start );
-	@include transition-property( border-color color transform );
-	@include transition-duration( $lunch-time-out );
+	cursor: pointer;
 
+
+	// Effects
+	@include transition-property( background-color border-color color );
+	@include transition-duration( $lunch-time-out );
+	
+
+	// Children
+	.lunch-icon {
+				
+		// Box
+		padding: 10px;
+		border: {
+			width: 2px;
+			style: solid;
+			color: #555;
+		}
+		display: block;
+		float: left;
+
+		// Skin
+		font: {
+			family: 'lunch-ico';
+			style: regular;
+			size: 30px;
+		}
+
+
+		// Effects
+		@include border-radius(34px);
+		@include hoverrotate( $lunch-btn-rotate-start );
+		@include transition-property( transform );
+		@include transition-duration( $lunch-time-out );
+	}
+
+	.lunch-label {
+		
+		// Box
+		display: block;
+		float: left;
+		height: 16px;
+		padding: {
+			top: 17px;
+			bottom: 17px;
+			right: 10px;
+			left: 10px;
+		}
+
+		// Skin
+		font: {
+			family: Arial, sans-serif;
+			style: normal;
+			weight: bold;
+		}
+		color: inherit;
+	}
+
+	// States
 	&:hover{
-		@include hoverrotate( $lunch-btn-rotate-hover );
+		
+		// Skin
+		background: {
+			color: transparent;
+		}
+
+		// Effects
 		@include transition-duration( $lunch-time-over );
+		
+		// Children
+		.lunch-icon {
+			@include hoverrotate( $lunch-btn-rotate-hover );
+			@include transition-duration( $lunch-time-over );
+		}
 	}
 }
