--- a/dev/sass/_ui.inputs.scss
+++ b/dev/sass/_ui.inputs.scss
@@ -45,7 +45,7 @@ $lunch-color-filter-active: #555;
 
 	// Skin
 	background: {
-		color: #efefef;
+		color: transparent;
 	}
 
 	// States
@@ -200,7 +200,6 @@ $lunch-color-filter-active: #555;
 			left: 10px;
 			right: 10px;
 		}
-
 	}
 }
 
