--- a/dev/sass/_util.vars.scss
+++ b/dev/sass/_util.vars.scss
@@ -11,6 +11,7 @@ $lunch-color-grn: #ADE61A;
 $lunch-color-grn-dark: #98D300;
 $lunch-color-ylw: #FFEC88;
 $lunch-color-ylw-dark: #FFD600;
+$lunch-color-ylw-ligh: #FFFCEA;
 
 // Timer
 $lunch-time-over: 200ms;
