--- a/templates/view.venuelist.html
+++ b/templates/view.venuelist.html
@@ -15,8 +15,8 @@
 
 	<div class="lunch-venue-filter">
 		<form class="lunch-venue-filter-form">
-			<input type="text" class="lunch-venue-filter-input" placeholder="Filter Venues" ng-model="searchInput.name">
-			<span class="lunch-venue-filter-btn">S</span>
+			<input type="text" class="lunch-venue-filter-input" id="lunch-venue-filter-input" placeholder="Filter Venues" ng-model="searchInput.name">
+			<label for="lunch-venue-filter-input" class="lunch-venue-filter-btn">S</label>
 		</form>
 	</div>
 
