--- a/dev/sass/_tmpl.venue.scss
+++ b/dev/sass/_tmpl.venue.scss
@@ -31,9 +31,9 @@ $venue-vertical-padding: 50px;
 	// Box
 	border: {
 		width: 0px;
-		bottom-width: 1px;
+		bottom-width: 2px;
 		style: solid;
-		color: #eee;
+		color: #f0f0f0;
 	}
 	margin: {
 		top: 0px;
@@ -68,8 +68,12 @@ $venue-vertical-padding: 50px;
 		padding: {
 			top: 0;
 			bottom: 0;
-			right: 60px;
-			left: 60px;
+			right: 40px;
+			left: 40px;
+		}
+		margin: {
+			left: 20px;
+			right: 20px;
 		}
 	}
 }
@@ -149,7 +153,6 @@ $venue-vertical-padding: 50px;
 	.lunch-venue-guests {
 		
 		display: block;
-		margin-right: 66px;
 	}
 }
 
@@ -325,7 +328,7 @@ $venue-vertical-padding: 50px;
 	}
 	color: #555;
 	background: {
-		color: $lunch-color-ylw;
+		color: #eee;
 	}
 	cursor: pointer;
 
@@ -376,7 +379,7 @@ $venue-vertical-padding: 50px;
 	height: 0; 
 	border-left: 7px solid transparent;
 	border-right: 7px solid transparent;
-	border-top: 7px solid  $lunch-color-ylw;
+	border-top: 7px solid  #eee;
 
 	// Position
 	position: absolute;
@@ -422,7 +425,6 @@ $venue-vertical-padding: 50px;
 	
 	// Skin
 	color: $lunch-color-blu;
-	
 	.lunch-icon{
 		border: {
 			color: $lunch-color-blu;
@@ -430,9 +432,13 @@ $venue-vertical-padding: 50px;
 	}
 
 	&:hover {
+
+
 		color: $lunch-color-blu-dark;
-		border: {
-			color: $lunch-color-blu-dark;
+		.lunch-icon{
+			border: {
+				color: $lunch-color-blu-dark;
+			}
 		}
 	}
 }
@@ -443,15 +449,20 @@ $venue-vertical-padding: 50px;
 .lunch-fn-quit {
 	
 	// Skin
-	border: {
-		color: $lunch-color-red;
-	}
 	color: $lunch-color-red;
+	.lunch-icon{
+		border: {
+			color: $lunch-color-red;
+		}
+	}
 
 	&:hover {
+
 		color: $lunch-color-red-dark;
-		border: {
-			color: $lunch-color-red-dark;
+		.lunch-icon {
+			border: {
+				color: $lunch-color-red-dark;
+			}
 		}
 	}
 }
